@@ -166,6 +166,7 @@ enum WorldBoolConfigs
     CONFIG_WARDEN_ENABLED,
     CONFIG_ANTICHEAT_ENABLE,
     CONFIG_EXTERNAL_MAIL,
+    CONFIG_ARMORY_ENABLE,
     CONFIG_WINTERGRASP_ENABLE,
     BOOL_CONFIG_VALUE_COUNT
 };
